# metachromium-extension

./: .gitignore  CNAME  README.md  build.cmd  build.ps1  package.json
.github/workflows/: build.yml  main.yml  release.yml
device/vr/: CMakeLists.txt  build.cmd  build.ps1
device/vr/OpenOVR/: BaseCommon.h  stdafx.h  steamvr_abi.h
device/vr/OpenOVR/API/: opencomposite.gen.h  opencomposite_api.gen.cs  opencomposite_capi.gen.h
device/vr/OpenOVR/Compositor/: compositor.cpp  compositor.h
device/vr/OpenOVR/Drivers/: Backend.h  DriverManager.cpp  DriverManager.h
device/vr/OpenOVR/Reimpl/: BaseApplications.cpp  BaseApplications.h  BaseChaperone.cpp  BaseChaperoneSetup.cpp  BaseChaperoneSetup.h  BaseClientCore.cpp  BaseClientCore.h  BaseCompositor.cpp  BaseCompositor.h  BaseExtendedDisplay.cpp  BaseInput.cpp  BaseInput.h  BaseOverlay.cpp  BaseOverlay.h  BaseRenderModels.cpp  BaseRenderModels.h  BaseScreenshots.cpp  BaseScreenshots.h  BaseServerDriverHost.cpp  BaseServerDriverHost.h  BaseSettings.cpp  BaseSettings.h  BaseSystem.cpp  BaseSystem.h  CVRApplications.cpp  CVRCompositor.cpp  CVROverlay.cpp  GVRApplications.gen.h  GVRChaperone.gen.h  GVRChaperoneSetup.gen.h  GVRClientCore.gen.h  GVRCompositor.gen.h  GVRExtendedDisplay.gen.h  GVRInput.gen.h  GVROCSystem.gen.h  GVROverlay.gen.h  GVRRenderModels.gen.h  GVRScreenshots.gen.h  GVRServerDriverHost.gen.h  GVRSettings.gen.h  (+3 more)
device/vr/SplitOpenVRHeaders/OpenVR/interfaces/: IVRApplications_004.h  IVRApplications_005.h  IVRApplications_006.h  IVRChaperoneSetup_005.h  IVRChaperoneSetup_006.h  IVRChaperone_003.h  IVRCompositor_012.h  IVRCompositor_013.h  IVRCompositor_014.h  IVRCompositor_015.h  IVRCompositor_016.h  IVRCompositor_018.h  IVRCompositor_019.h  IVRCompositor_020.h  IVRCompositor_021.h  IVRCompositor_022.h  IVRDebug_001.h  IVRDriverManager_001.h  IVRExtendedDisplay_001.h  IVRIOBuffer_001.h  IVRIOBuffer_002.h  IVRInput_003.h  IVRInput_004.h  IVRInput_005.h  IVRInput_006.h  IVRInput_007.h  IVRNotifications_002.h  IVROverlay_010.h  IVROverlay_011.h  IVROverlay_012.h  IVROverlay_013.h  IVROverlay_014.h  IVROverlay_016.h  IVROverlay_017.h  IVROverlay_018.h  IVROverlay_019.h  IVRRenderModels_004.h  IVRRenderModels_005.h  IVRRenderModels_006.h  IVRResources_001.h  (+21 more)
device/vr/config/: appconfig.json  steamvr.vrsettings
device/vr/config/oculus/: driver_oculus.vrchap
device/vr/config/vrappconfig/: openvr.tool.steamvr_environments.vrappconfig  openvr.tool.steamvr_tutorial.vrappconfig  steam.app.418650.vrappconfig  steam.app.438100.vrappconfig
device/vr/detours/: image.cpp
device/vr/gl/include/glad/: glad.h
device/vr/gl/src/glad/: glad.c
device/vr/log/: basestation_wireless.txt  log.txt  vrclient_Blocks.txt  vrclient_SpacePirateVR.previous.txt  vrclient_SpacePirateVR.txt  vrclient_chrome.previous.txt  vrclient_chrome.txt  vrclient_javaw.txt  vrclient_process.previous.txt  vrclient_process.txt  vrclient_process2.txt  vrclient_process4.previous.txt  vrclient_process4.txt  vrclient_process5.previous.txt  vrclient_process5.txt  vrclient_steamtours.previous.txt  vrclient_steamtours.txt  vrclient_steamvr_tutorial.txt  vrclient_vrcompositor.previous.txt  vrclient_vrcompositor.txt  vrclient_vrdashboard.previous.txt  vrclient_vrdashboard.txt  vrclient_vrmonitor.previous.txt  vrclient_vrmonitor.txt  vrclient_vrstartup.previous.txt  vrclient_vrstartup.txt  vrclient_vrwebhelper_bindingcallouts.previous.txt  vrclient_vrwebhelper_bindingcallouts.txt  vrclient_vrwebhelper_controllerbinding.previous.txt  vrclient_vrwebhelper_controllerbinding.txt  vrclient_vrwebhelper_keyboard.previous.txt  vrclient_vrwebhelper_keyboard.txt  vrclient_vrwebhelper_main.previous.txt  vrclient_vrwebhelper_main.txt  vrclient_vrwebhelper_messageoverlay.previous.txt  vrclient_vrwebhelper_messageoverlay.txt  vrclient_vrwebhelper_notificationtoast.previous.txt  vrclient_vrwebhelper_notificationtoast.txt  vrclient_vrwebhelper_pairing.previous.txt  vrclient_vrwebhelper_pairing.txt  (+39 more)
device/vr/openvr/test/: applicationsproxy.cpp  applicationsproxy.h  base64.h  chaperoneproxy.cpp  chaperoneproxy.h  chaperonesetupproxy.cpp  chaperonesetupproxy.h  compositor2d.cpp  compositor2d.h  compositorproxy.cpp  compositorproxy.h  coreproxy.cpp  coreproxy.h  cv.cpp  cv.h  dll.cc  fake_openvr_impl_api.cc  fake_openvr_impl_api.h  fnproxy.cpp  fnproxy.h  glcontext.cpp  glcontext.h  hijack.cc  hijack.h  inputproxy.cpp  inputproxy.h  lol.cpp  matrix.cpp  matrix.h  offsets.h  out.cpp  out.h  overlayproxy.cpp  overlayproxy.h  process.cpp  process2.cpp  process3.cpp  process4.cpp  proxy.cpp  proxy.h  (+14 more)
device/vr/sample/: hellovr_opengl_main.cpp  hellovr_opengl_main.h
extension/: background.js  content.js  cube.html  extension.pem  index.html  main.js  manifest.json  native-host.reg  native-manifest-template.json  native-manifest.json  native_host.reg  ui.html  xr.js
puppeteer/: index.js
